# XWindow

./: CMakeLists.txt  Makefile.m  a.out  main.cpp
example/: MainWindow.cpp  MainWindow.h
lib/Extensions/Basic/: XSystem.cpp  XSystem.h  XVisual.cpp  XVisual.h  XVisualObject.cpp  XVisualObject.h  XWindow.cpp  XWindow.h
lib/Extensions/Basic/Interfaces/: IColorable.cpp  IColorable.h  IDrawable.cpp  IDrawable.h  IEventHandler.cpp  IEventHandler.h  ILifecycle.cpp  ILifecycle.h
lib/Extensions/Common/: Brush.cpp  Brush.h  Color.cpp  Color.h
lib/Extensions/XWindow/: XWindow.cpp  XWindow.h
